Fix bug on Safari

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -353,7 +353,6 @@ img.emoji {
 .languageflagbutton_loading {
     animation: languageSlidein 1s cubic-bezier(0, 0, 0, 1);
     animation-fill-mode: forwards;
-    transform: translateX(10vw);
     opacity: 0;
 }
 
